# tripkro

./: .gitignore  DockerFile  README.md  docker-compose.yml  pyproject.toml
postgres/: Dockerfile  dump-commands.txt
test_project/: manage.py  pyproject.toml
test_project/account/: serializers.py  urls.py
test_project/account/migrations/: 0001_initial.py
test_project/test_project_main/: asgi.py  settings.py  urls.py  wsgi.py
tripkro/: manage.py
tripkro/account/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
tripkro/account/migrations/: 0001_initial.py  0002_user_is_phone_verified.py
tripkro/templates/emails/: sign_up_email_verify.html
tripkro/tripkro/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
tripkro/tripkro/conf/: local.py  prod.py  settings.py
